# tasks_concurrency

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/DiningPhilosophers/: DiningPhilosophers.cpp  ForkLevelProtocol.hpp  IncorrectProtocol.hpp  Philosopher.hpp  Protocol.hpp  Utils.hpp  WaiterFairProtocol.hpp  WaiterProtocol.hpp
src/: GlobalTaskExecutor.cpp  TaskSerializer.cpp
tasks/: GlobalTaskExecutor.hpp  TaskExecutor.hpp  TaskSerializer.hpp
